--- a/index.html
+++ b/index.html
@@ -49,5 +49,13 @@
         </div>
 
         <footer>This Responsive Web Page was made by Tiago Taquelim @2018 for the <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-tribute-page" target="_blank">freeCodeCamp</a> project</footer>
+    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-7934650330295304",
+            enable_page_level_ads: true
+          });
+        </script>
     </body>
 </html>
